array.island.Island.scala.error
Compilation error:
Island:9: error: type mismatch;
 found   : Unit
 required: Int
  while (compteur <= taille) {
  ^Island:15: error: return outside method definition
};return lvl
  ^